--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.cdnfonts.com/css/bulgatti" rel="stylesheet">
 	<link href="//db.onlinewebfonts.com/c/5379fe28467c238a441a3d35e0de8fc8?family=RM+Typerighter+old" rel="stylesheet" type="text/css"/>
 	<link rel="icon" href="img/icon.png">
+	<link href="https://fonts.cdnfonts.com/css/modern-typewriter" rel="stylesheet">
 </head>
 
 <body>
