--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<link href="//db.onlinewebfonts.com/c/5379fe28467c238a441a3d35e0de8fc8?family=RM+Typerighter+old" rel="stylesheet" type="text/css"/>
 	<link rel="icon" href="img/icon.png">
 	<link href="https://fonts.cdnfonts.com/css/modern-typewriter" rel="stylesheet">
+
 </head>
 
 <body>
-	<div class="main">
+	<div class="main" id = 'main'>
 		<div class="navbar">
 			<div class="icon">
 				 <img class = "logo" src="img/gitti png.png" alt="gitti"> 
@@ -30,8 +31,8 @@
 			</div>
 		</div>
 		<div class="content">
-			<span id="smart" class="smart">&#8205; </span> <br><span id="hard" class="nhard">&#8205; </span>
-			<br>
+			<span id="smart" class="smart">&#8205; </span><span id="hard" class="nhard">&#8205; </span>
+			
 			<p class="par"> Welcome to Gitti!<br>
 				We offer a wide variety of freelance services, from writing  and editing to graphics designing & coding. You can find short-term or long-term projects here so you can make a steady income or just some extra cash on the side.</p>
 			<button class="cn"><a href="#">JOIN FOR FREE</a> </button>
