--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 </head>
 
-<body>
+<body id="body">
 	<div class="main" id = 'main'>
 		<div class="navbar">
 			<div class="icon">
-				 <img class = "logo" src="img/gitti png.png" alt="gitti"> 
-
+				 <img class = "logo" src="img/gitti png.png" alt="gitti">
+				 <a  href="/"></a>
+		
 			</div>
 			<div class="menu">
 				<ul>
@@ -36,7 +37,7 @@
 			<p class="par"> Welcome to Gitti!<br>
 				We offer a wide variety of freelance services, from writing  and editing to graphics designing & coding. You can find short-term or long-term projects here so you can make a steady income or just some extra cash on the side.</p>
 			<button class="cn"><a href="#">JOIN FOR FREE</a> </button>
-
+		
 			<div class="form">
 				<h2> LOGIN HERE </h2>
 				<input type="email" name="email" placeholder="Enter email here">
@@ -44,25 +45,24 @@
 				<button class="btnn">
 					<a href="#">LOGIN </a>
 				</button>
-
+		
 				<p class="link">Don't have an account <br><br>
 					<a href="#">Sign up here </a>
 				</p>
 				<p class="liw">Log in with</p>
 				<div class="col">
-        <a href="#" class="fb butn">
-          <center><img class="lg" src="img/facebook_logo.png"></img>  Login with Facebook </center> 
-        </a>
-        <a href="#" class="google butn">
-          <center><img src="img/google_logo.png" class="lg"></img> Login with Google</center>
-        </a>
-      </div>
-			</div>
-
-
+		<a href="#" class="fb butn">
+		  <center><img class="lg" src="img/facebook_logo.png"></img>  Login with Facebook </center> 
+		</a>
+		<a href="#" class="google butn">
+		  <center><img src="img/google_logo.png" class="lg"></img> Login with Google</center>
+		</a>
 		</div>
-	</div>
-
+			</div>
+		
+		
+		</div>
+		</div>
 
 
 </body>
